<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenFridge</string>
    <string name="New_Item">Add</string>
    <string name="exp_button">Expiration List</string>
    <string name="shopping_button">Shopping List</string>
    <string name="EditPost_button">Edit/Postpone</string>
    <string name="Done_button">Apply</string>
    <string name="Cancel_button">Cancel</string>
    <string name="Send_Shopping">Add to shopping list</string>
    <string name="Item_disposed">Thrown out</string>
    <string name="Item_consumed">Eaten</string>
    <string name="expiredTitle">Spoiled Food</string>
    <string name="nearlyTitle">Old Food</string>
    <string name="goodTitle">Fresh Food</string>
<string name="shoppingTitle">Shopping List</string>
    <string-array name="Common_items">
        <item>Eggs</item>
        <item>Milk</item>
        <item>Cheese</item>
        <item>Tomatoes</item>
        <item>aaaaaaaaa</item>
        <item>eeeeeeeee</item>
        <item>vvvvvvvvvvvvvv</item>
        <item>ttttttttttttttttttttt</item>
        <item>ddddddddddddddddd</item>
        <item>ffffffffffffffffffff</item>
        <item>sssssssssssssssssssssss</item>
        <item>eeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeeee</item>
        <item>rrrrrrr</item>
        <item>aaaaaaaaaaaaaaaaaaaaaa</item>
    </string-array>
    <string-array name="timePeriodArray">
        <item>days</item>
        <item>weeks</item>
        <item>months</item>
    </string-array>
    <string name="deleteChecked">Delete Checked</string>
    <string name="commonItemsTitle">Add Common Item</string>
    <string name="customItemsTitle">Add Custom Item</string>
</resources>