<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/button1"
        android:layout_width="fill_parent"
        android:layout_height="75dp"
        android:onClick="EditPostponeClick"
        android:text="@string/EditPost_button" >
    </Button>

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Send_Shopping"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </CheckBox>

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Item_disposed"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Item_consumed"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button2"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:onClick="DoneClick"
            android:text="@string/Done_button" >
        </Button>

        <Button
            android:id="@+id/button3"
            android:layout_width="fill_parent"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:onClick="CancelClick"
            android:text="@string/Cancel_button" >
        </Button>
    </LinearLayout>

</LinearLayout>