<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <EditText
        android:id="@+id/itemName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/newItemButton"
        android:layout_weight="1"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <Button
        android:id="@+id/newItemButton"
        android:layout_width="100px"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="addItemToList"
        android:text="@string/New_Item" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@layout/expire"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/itemName"
        android:text="@string/shoppingTitle" />

    <ListView
        android:id="@+id/shoppingLV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout1"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1" />

    <RelativeLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/deleteChecked"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="deleteChecked"
            android:text="@string/deleteChecked" />
    </RelativeLayout>

</RelativeLayout>